--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,6 +20,10 @@
 
     <nav>
         <a href="/" class="logo">PACT</a>
+
+        <div class="nav-item ham">
+            <i class="fas fa-bars"></i>
+        </div>
         <ul class="navbar">
             <li class="nav-item">
                 <a href="/">Home</a>
@@ -29,7 +33,7 @@
             </li>
             <li class="nav-item dropdown-toggle">
                 <!-- <div> -->
-                    <a href="/program">Program <i class="fas fa-caret-down"></i></a>
+                    <a href="/program" class="toggle-nav">Program <i class="fas fa-caret-down"></i></a>
                     <ul class="dropdown-menu">
                         <li class="dropdown-item"><a href="/program/overview">Overview</a></li>
                         <li class="dropdown-item"><a href="/program/logistics">Logistics</a></li>
