--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,5 +1,5 @@
 .intro3 {
-    color: #444444;
+    color: var(--grey);
     /* display: flex; */
 }
 
@@ -40,8 +40,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-image: linear-gradient(rgba(15, 16, 83, 0.7), rgba(15, 16, 83, 0.7));
-    color: #dddddd;
+    background-image: linear-gradient(var(--trans-blue),var(--trans-blue));
+    color: var(--off-white);
 
     padding: 50px 17% 50px 15%;
     margin-bottom: 50px;
@@ -72,7 +72,7 @@
     padding: 50px;
     margin: 0 auto;
 
-    color: #444444;
+    color: var(--grey);
 }
 
 .reqs h2 {
@@ -94,7 +94,7 @@
     padding: 50px;
     margin: 10px;
     border-radius: 15px;
-    border: 1px solid #444444;
+    border: 1px solid var(--grey);
     display: flex;
 
     flex-direction: column;
