--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: #fcfcfc;
+    background-color: var(--super-white);
     padding: 20px 0 0 0;
     /* text-align: center; */
 }
