--- a/public/css/instructors.css
+++ b/public/css/instructors.css
@@ -1,5 +1,5 @@
 .instructors {
-    color: #444444;
+    color: var(--grey);
     width: 80%;
     margin: 0 auto;
     padding: 20px;
@@ -47,7 +47,7 @@
     position: absolute;
     bottom: -260px;
     left: 100px;
-    box-shadow: 0px 0px 5px 0#444444;
+    box-shadow: 0px 0px 5px 0var(--grey);
     z-index: 1;
 
 }
@@ -71,11 +71,11 @@
 
     .instructors .text1 {
         position: absolute;
-        color: #dddddd;
+        color: var(--off-white);
 
         width: 190%;
         padding: 0 15px;
-        background-image: linear-gradient(rgba(15, 16, 83, 0.7), rgba(15, 16, 83, 0.7));
+        background-image: linear-gradient(var(--trans-blue), var(--trans-blue));
         top: 75%;
         left: -90%;
         z-index: 1;
@@ -127,8 +127,8 @@
 .guest {
     /* height: 100vh; */
     /* background-color: rgba(15, 16, 83, 1); */
-    background-image: linear-gradient(rgba(15, 16, 83, 1), #111111);
-    color: #bbbbbb;
+    background-image: linear-gradient(rgba(15, 16, 83, 1), var(--black));
+    color: var(--light-grey);
 }
 /* 
 .guest {
@@ -143,7 +143,7 @@
 }
 
 .guest .intro2 {
-    color: #dddddd;
+    color: var(--off-white);
     width: 80%;
     margin: 0 100px;
     font-size: 1.4rem;
@@ -164,9 +164,14 @@
 
 .intro2 a {
     text-decoration: none;
-    color: #bbbbbb;
+    color: var(--light-grey);
     padding-right: 20px;
 }
+
+.intro2 a:hover {
+    color: var(--super-white);
+}
+
 /* 
 .guest img {
     height: 500px;
@@ -181,8 +186,13 @@
 
 .bg .text a {
     text-decoration: none;
-    color: #eeeeee;
+    color: var(--white);
     display: block;
+}
+
+.bg .text a:hover {
+    text-decoration: underline;
+    color: var(--super-white);
 }
 
 .guest .flex {
@@ -215,7 +225,7 @@
     /* padding-bottom: 20px; */
     padding: 0 20px;
 
-    background-image: linear-gradient(to bottom, rgba(44, 15, 83, 0.9), rgba(15, 31, 83, 0.9));
+    background-image: linear-gradient(to bottom, rgba(44, 15, 83, 0.9),var(--blue));
     opacity: 0;
     transition: all 0.4s;
 
