--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/9b82d76088.js" crossorigin="anonymous"></script>
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Open+Sans:wght@300&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/partials.css">
     <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/overview.css">
