--- a/views/home.ejs
+++ b/views/home.ejs
@@ -66,7 +66,7 @@
         </div>
 
         <div class="requirements">
-            <p>The only requirements to participate&nbsp;are<br>high school algebra,<br>willingness to work hard and be challenged,<br>and, above all,<br>the desire to learn.</p>
+            <p>The only requirements to participate&nbsp;are<br>high school algebra,<br>a willingness to work hard and be challenged,<br>and, above all,<br>the desire to learn.</p>
         </div>
     </section>
 </div>
