--- a/public/css/partials.css
+++ b/public/css/partials.css
@@ -45,6 +45,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     z-index: 10;
+    flex-wrap: wrap;
 }
 
 .navbar {
@@ -60,9 +61,9 @@ nav {
     /* margin: 15px; */
 }
 
-.nav-item a {
+.nav-item > a {
     text-decoration: none;
-    color: var(--off-white);
+    color: var(--light-grey);
     padding: 10px;
     border-radius: 10px;
 }
@@ -74,7 +75,7 @@ nav {
 .logo {
     margin-right: auto;
     text-decoration: none;
-    font-size: 1.4rem;
+    font-size: 1.4rem; 
     color:var(--off-white);
     padding: 10px 20px;
 }
@@ -89,17 +90,13 @@ nav {
     padding: 10px 10px 10px 0;
     background-color: var(--white);
     border-radius: 5px;
-    
-}
 
-.dropdown-toggle:hover .dropdown-menu {
-    display: block;
     position: absolute;
     z-index: 1;
 }
 
-.dropdown-toggle:hover > a {
-    color: var(--white);
+.dropdown-toggle:hover .dropdown-menu {
+    display: block;
 }
 
 .dropdown-item {
@@ -129,16 +126,7 @@ nav {
     display: none;
     padding-right: 20px;
     font-size: 1.5rem;
-}
-
-@media only screen and (max-width: 750px) {
-    .navbar {
-        display: none;
-    }
-
-    .ham {
-        display: block;
-    }
+    color: var(--grey);
 }
 
 /* ------------------FOOTER------------------- */
@@ -147,4 +135,61 @@ footer {
     padding: 40px;
     text-align: center;
     /* background-color: black; */
+}
+
+@media only screen and (max-width: 750px) {
+    .navbar {
+        display: block;
+        width: 100%;
+        padding: 0 10px;
+        margin: 0;
+
+        text-align: right;
+
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.2s ease-out;
+    }
+
+    .navbar .nav-item {
+        padding-bottom: 15px;
+        padding-top: 0;
+    }
+
+    .dropdown-menu {
+        position: static;
+        display: block;
+        background: none;
+        margin: 0;
+        padding: 10px;
+        padding-right: 27px;
+        direction: rtl;
+        list-style-type: circle;
+        /* font-size: 0.7rem; */
+    }
+
+    .dropdown-item {
+        padding: 0;
+    }
+
+    .dropdown-item a {
+        color: var(--light-grey);
+    }
+    .dropdown-item a:hover {
+        color: var(--white);
+    }
+
+    .dropdown-item:hover {
+        background: none;
+    }
+
+    .ham {
+        display: block;
+    }
+
+    nav .active, nav .ham:hover {
+        /* background-color: var(--trans-blue); */
+        /* background-image: linear-gradient(to left, rgba(117, 19, 93, 0.73), #444444); */
+        color: var(--off-white);
+    }
 }
