--- a/views/instructors.ejs
+++ b/views/instructors.ejs
@@ -6,45 +6,47 @@
 
 <div class="container dark">
 
-    <section class="instructors">
-        <div class="img">
-            <img src="/img/instructors/dr_gandhi.jpg" alt="dr_gandhi">
-        </div>
-        
-        <div class="text">
-
-            <p>
-                PACT is run by Professor Rajiv Gandhi, Professor of Computer Science at Rutgers University-Camden. He also teaches part-time at the University of Pennsylvania. He received his Ph.D. in Computer Science from the University of Maryland in 2003. He also worked as a software engineer at Qualcomm from 1994-96.
-            </p>
-        
-            <p>
-                His research interests are Algorithm Design, Combinatorial Optimization, and Probabilistic methods. He is a passionate educator and has worked with students with varied backgrounds, and he received the Provost’s Award for Teaching Excellence at Rutgers–Camden in 2006.  He received a Fulbright fellowship to teach in Mumbai, India from Jan-May 2011.
-            </p>
-            <div class="text1">
+    <div class="sep">
+        <section class="instructors">
+            <div class="img">
+                <img src="/img/instructors/dr_gandhi.jpg" alt="dr_gandhi">
+            </div>
+            
+            <div class="text">
+    
                 <p>
-                    In 2009, Professor Gandhi gave a lecture to a group of students at the Cherry Hill East high school and volunteered to teach a group of students topics in Discrete Mathematics during Saturdays over the course of the school year 2009-2010. He then continued to work with these students over the summer of 2010. In summer 2011, he worked with the Center for Computational Intractability to hold a similar program on the Princeton campus, and this program was repeated in the summer of 2012. Thus PACT was born.
-                </p>
-                
-                <p>
-                    Professor Gandhi has given an inspirational TEDx Talk in 2016 called “From Potential To Promise: Developing scholars, one eureka moment at a time” which can be found below.
+                    PACT is run by Professor Rajiv Gandhi, Professor of Computer Science at Rutgers University-Camden. He also teaches part-time at the University of Pennsylvania. He received his Ph.D. in Computer Science from the University of Maryland in 2003. He also worked as a software engineer at Qualcomm from 1994-96.
                 </p>
             
-
-                <div class="iframe">
-                    <iframe src="https://www.youtube.com/embed/Kao_IZUCKgg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p>
+                    His research interests are Algorithm Design, Combinatorial Optimization, and Probabilistic methods. He is a passionate educator and has worked with students with varied backgrounds, and he received the Provost’s Award for Teaching Excellence at Rutgers–Camden in 2006.  He received a Fulbright fellowship to teach in Mumbai, India from Jan-May 2011.
+                </p>
+                <div class="text1">
+                    <p>
+                        In 2009, Professor Gandhi gave a lecture to a group of students at the Cherry Hill East high school and volunteered to teach a group of students topics in Discrete Mathematics during Saturdays over the course of the school year 2009-2010. He then continued to work with these students over the summer of 2010. In summer 2011, he worked with the Center for Computational Intractability to hold a similar program on the Princeton campus, and this program was repeated in the summer of 2012. Thus PACT was born.
+                    </p>
+                    
+                    <p>
+                        Professor Gandhi has given an inspirational TEDx Talk in 2016 called “From Potential To Promise: Developing scholars, one eureka moment at a time” which can be found below.
+                    </p>
+                
+    
+                    <div class="iframe">
+                        <iframe src="https://www.youtube.com/embed/Kao_IZUCKgg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
-        </div>
-
-    </section>
-
+    
+        </section>
+    
+    </div>
+    
     <div class="separator">
         <svg class="separator__svg" width="100%" height="400" viewBox="0 0 100 100" preserveAspectRatio="none" fill="rgba(15, 16, 83, 1)" version="1.1" xmlns="http://www.w3.org/2000/svg">
            <path d="M 100 100 V 10 L 0 100"/>
            <path d="M 30 73 L 100 18 V 10 Z" fill="rgba(58, 59, 138, 1)" stroke-width="0"/>
         </svg>
-        <div class="background">
-        </div>
+        <div class="background"></div>
     </div>
     
     <section class="guest">
