--- a/views/application.ejs
+++ b/views/application.ejs
@@ -12,27 +12,35 @@
             </p>
 
             <p class="app">
-                https://applypact.com/apply/4
+                <a href="https://applypact.com/apply/4">
+                    https://applypact.com/apply/4
+                </a>
             </p>
         </div>
 
         <div class="second">
-            <h3>
-                Fees
-            </h3>
-            <p>
-                The fee for each admitted student is $1500.  We have some financial support available and will try our best to see that admitted students shall not be turned away due to financial constraints (justification required), so we strongly encourage anyone interested in the program to apply.
-            </p>
+            <div>
+                <h3>
+                    Fees
+                </h3>
+                <p>
+                    The fee for each admitted student is $1500.  We have some financial support available and will try our best to see that admitted students shall not be turned away due to financial constraints (justification required), so we strongly encourage anyone interested in the program to apply.
+                </p>
+            </div>
+
         </div>
 
         <div class="third">
-            <p>
-                We will be doing rolling admissions, i.e., we will review applications every few weeks. All applications received before March 20, 2020 will receive full consideration. We will however continue to accept applications until all seats are taken.
-            </p>
+            <div>
 
-            <h3>
-                Deadline
-            </h3>
+                <h3>
+                    Deadline
+                </h3>
+                <p>
+                    We will be doing rolling admissions, i.e., we will review applications every few weeks. All applications received before March 20, 2020 will receive full consideration. We will however continue to accept applications until all seats are taken.
+                </p>
+    
+            </div>
         </div>
     </section>
 
