--- a/public/css/faq.css
+++ b/public/css/faq.css
@@ -62,3 +62,14 @@
         width: 80%;
     }
 }
+
+@media only screen and (max-width: 550px) {
+    .faq {
+        width: 90%;
+        padding: 20px 0;
+    }
+    
+    .faq h3 {
+        font-size: 1rem;
+    }
+}
