--- a/views/instructors.ejs
+++ b/views/instructors.ejs
@@ -69,7 +69,7 @@
             <h4><%= year[0] %></h4>
             <div class="flex">
                 <% year[1].forEach(lecturer => { %> 
-                <div class="bg" style="background-image: radial-gradient(rgba(15, 31, 83, 0), rgba(15, 31, 83, 0.2) 80%, rgba(15, 31, 83, 0.4)), url('/img/instructors/<%= lecturer[0][0] %>')">
+                <div class="bg" style="background-image: url('/img/instructors/<%= lecturer[0][0] %>')">
                     <div class="text">
                         <div>
                             <p>
