--- a/public/css/students.css
+++ b/public/css/students.css
@@ -47,3 +47,14 @@
         font-size: 2rem;
     }
 }
+
+@media only screen and (max-width: 500px) {
+    .group_photos .group h3 {
+        font-size: 1.5rem;
+    }
+
+    .group_photos .group p {
+        font-size: 0.7rem;
+        line-height: 1rem;
+    }
+}
