--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,6 +12,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/favicon_io/site.webmanifest">
+    <meta name="description" content="Program in Algorithmic and Combinatorial Thinking" />
+    <meta itemProp="name" content="Condé Nast - Home"/>
+    <meta itemProp="description" content="Program in Algorithmic and Combinatorial Thinking" />
+    <meta itemProp="image" content="https://www.google.com/search?q=image&tbm=isch&source=iu&ictx=1&fir=3z9LIUs4ChzUOM%252ChrsXnpNgc3ZwMM%252C_&vet=1&usg=AI4_-kTte39BqlR0dNxrY4KNIZ22wyiq5A&sa=X&ved=2ahUKEwj71uHwxfbtAhXHslkKHXAyAb0Q9QF6BAgKEAE#imgrc=3z9LIUs4ChzUOM" />
+    <meta name="keywords" content="pact, program in algorithmic and combinatorial thinking, computer science princeton, highschool, cs, summer program">
 
     <link rel="stylesheet" href="/css/partials.css">
     <link rel="stylesheet" href="/css/header.css">
