--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
     <meta name="keywords" content="pact, program in algorithmic and combinatorial thinking, computer science princeton, highschool, cs, summer program">
     <meta property="og:title" content="PACT">
     <meta property="og:description" content="Program in Algorithmic and Combinatorial Thinking">
-    <meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg">
+    <meta property="og:image" content="/img/home/expresssions.jpg">
     <meta property="og:url" content="https://mighty-beyond-04832.herokuapp.com">
     <meta name="twitter:card" content="summary_large_image">
 
