getting image to work

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,8 +16,9 @@
     <meta name="keywords" content="pact, program in algorithmic and combinatorial thinking, computer science princeton, highschool, cs, summer program">
     <meta property="og:title" content="PACT">
     <meta property="og:description" content="Program in Algorithmic and Combinatorial Thinking">
-    <meta property="og:image" content="/img/home/expresssions.jpg">
+    <meta property="og:image" content="https://mighty-beyond-04832.herokuapp.com/img/home/expresssions.jpg">
     <meta property="og:url" content="https://mighty-beyond-04832.herokuapp.com">
+    <meta property="og:image:alt" content="Picture of PACT">
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="stylesheet" href="/css/partials.css">
