--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,6 +19,7 @@
     <meta property="og:image" content="https://mighty-beyond-04832.herokuapp.com/img/home/expresssions.jpg">
     <meta property="og:url" content="https://mighty-beyond-04832.herokuapp.com">
     <meta property="og:image:alt" content="Picture of PACT">
+    <meta name="twitter:image" content="https://mighty-beyond-04832.herokuapp.com/img/home/expresssions.jpg">
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="stylesheet" href="/css/partials.css">
