not large image

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,7 @@
     <meta property="og:url" content="https://mighty-beyond-04832.herokuapp.com">
     <meta property="og:image:alt" content="Picture of PACT">
     <meta name="twitter:image" content="https://mighty-beyond-04832.herokuapp.com/img/home/expresssions.jpg">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary">
 
     <link rel="stylesheet" href="/css/partials.css">
     <link rel="stylesheet" href="/css/header.css">
