make large again

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,12 +14,12 @@
     <link rel="manifest" href="/favicon_io/site.webmanifest">
     <meta name="description" content="Program in Algorithmic and Combinatorial Thinking" />
     <meta name="keywords" content="pact, program in algorithmic and combinatorial thinking, computer science princeton, highschool, cs, summer program">
-    <meta property="og:title" content="PACT">
+    <meta property="og:title" content="<%= title %>">
     <meta property="og:description" content="Program in Algorithmic and Combinatorial Thinking">
     <meta property="og:image" content="<%= img %>">
     <meta property="og:url" content="<%= url %>">
     <meta property="og:image:alt" content="Picture of PACT">
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
 
     <link rel="stylesheet" href="/css/partials.css">
     <link rel="stylesheet" href="/css/header.css">
