add modernizr script for use if needed

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,5 +5,7 @@
 </footer>
 
 <script src="/js/script.js"></script>
+<!-- ** use this if touch screen doesn't work -->
+<script src="/js/modernizr-custom.js"></script>
 </body>
 </html>
