nav change, overview spacing suggestion by amy ;)

--- a/public/css/overview.css
+++ b/public/css/overview.css
@@ -1,6 +1,6 @@
 .intro {
     width: 70%;
-    margin: 100px auto;
+    margin: 60px auto 100px auto;
     color: var(--grey);
     text-align: center;
     display: flex;
