--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -1,4 +1,4 @@
-<%- include("../partials/header") %> 
+<%- include("partials/header") %> 
 
 <header class="gradient">
     <h1>FAQ</h1>
@@ -18,4 +18,4 @@
     </ul>
 </div>
 
-<%- include("../partials/footer") %> 
+<%- include("partials/footer") %> 
