--- a/views/logistics.ejs
+++ b/views/logistics.ejs
@@ -1,4 +1,4 @@
-<%- include("../partials/header") %> 
+<%- include("partials/header") %> 
 
 <header class="gradient">
     <h1>Logistics</h1>
@@ -28,4 +28,4 @@
 
 </div>
 
-<%- include("../partials/footer") %> 
+<%- include("partials/footer") %> 
