--- a/views/overview.ejs
+++ b/views/overview.ejs
@@ -1,4 +1,4 @@
-<%- include("../partials/header") %> 
+<%- include("partials/header") %> 
 
     <header class="gradient">
         <h1>Overview</h1>
@@ -143,4 +143,4 @@
 </div>
 
 
-<%- include("../partials/footer") %> 
+<%- include("partials/footer") %> 
